# ansible2dd

./: .pylintrc  README.md  a2dd.py  constants.py  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  utils.py
.github/workflows/: pull-request-functional.yml  pull-request-syntax.yml
a2dd/: a2dd.py  constants.py  main.py  utils.py
contrib/: extracter.py  options_extracter.py
tests/: copy.yaml  file.yaml  package.yaml  service.yaml  systemd.yaml  template.yml  vars.yaml
tests/plays/: playbook1.yaml
tests/results/: copy.yaml  file.yaml  package.yaml  playbook1.yaml  service.yaml  systemd.yaml  template.yml  tripleo_multipathd_role.yaml  vars.yaml
