[metadata]
name = a2dd
summary = A tool for converting ansible playbooks to directord files
description_file =
    README.md
author = Sagi Shnaidman
author_email = sshnaidm@redhat.com
home_page = https://github.com/directord/ansible2dd/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[files]
packages =
    a2dd

[entry_points]
console_scripts =
    a2dd = a2dd.main:main

[pbr]
skip_authors = True
skip_changelog = True
